[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "forecasting"
version = "0.1.0"
description = "Long-horizon forecasting platform: multi-model champion selection over Wikipedia pageview series, scored live on GCP."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Seneca Widvey" }]
dependencies = [
    "pydantic>=2.7",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.2",
    "pip-tools>=7.4",
    "types-PyYAML",
    # Windows-only transitive dep of click/pytest/build. Declared explicitly so
    # the hash-pinned lockfile (compiled on Linux) also installs on Windows.
    "colorama>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
forecasting = ["py.typed"]

# ---------------------------------------------------------------- ruff
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]

# ---------------------------------------------------------------- mypy
[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["forecasting"]

# ---------------------------------------------------------------- pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
